--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.2.0",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "ether": "^0.0.9"
   }
 }
