--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "ether": "^0.0.9"
+    "@rainbow-me/rainbowkit": "^1.0.1",
+    "ether": "^0.0.9",
+    "viem": "^0.3.50",
+    "wagmi": "^1.1.0"
   }
 }
