--- a/package.json
+++ b/package.json
@@ -10,11 +10,35 @@
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "chai": "^4.3.7",
+    "ethers": "^6.6.0",
     "hardhat": "^2.15.0",
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
     "typechain": "^8.2.0",
     "typescript": "^5.1.3"
-  }
+  },
+  "dependencies": {
+  },
+  "name": "voting_app",
+  "description": "This project demonstrates a basic Hardhat use case. It comes with a sample contract, a test for that contract, and a script that deploys that contract.",
+  "version": "1.0.0",
+  "main": "hardhat.config.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Deepjyoti-Sarmah/Voting_dapp.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Deepjyoti-Sarmah/Voting_dapp/issues"
+  },
+  "homepage": "https://github.com/Deepjyoti-Sarmah/Voting_dapp#readme"
 }
