--- a/package.json
+++ b/package.json
@@ -1,4 +1,21 @@
 {
+  "name": "voting_app",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Deepjyoti-Sarmah/Voting_dapp.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Deepjyoti-Sarmah/Voting_dapp/issues"
+  },
+  "homepage": "https://github.com/Deepjyoti-Sarmah/Voting_dapp#readme",
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.1",
     "@nomicfoundation/hardhat-ethers": "^3.0.2",
@@ -10,35 +27,11 @@
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "chai": "^4.3.7",
-    "ethers": "^6.6.0",
     "hardhat": "^2.15.0",
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
     "typechain": "^8.2.0",
     "typescript": "^5.1.3"
-  },
-  "dependencies": {
-  },
-  "name": "voting_app",
-  "description": "This project demonstrates a basic Hardhat use case. It comes with a sample contract, a test for that contract, and a script that deploys that contract.",
-  "version": "1.0.0",
-  "main": "hardhat.config.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": "mocha"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Deepjyoti-Sarmah/Voting_dapp.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Deepjyoti-Sarmah/Voting_dapp/issues"
-  },
-  "homepage": "https://github.com/Deepjyoti-Sarmah/Voting_dapp#readme"
+  }
 }
