--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
     "typescript": "^5.0.3"
+  },
+  "dependencies": {
+    "@rainbow-me/rainbowkit": "^1.0.2",
+    "wagmi": "^1.2.0"
   }
 }
